made menu responsive

--- a/style.css
+++ b/style.css
@@ -101,3 +101,8 @@ body {
     -o-transform: translateY(-2px);
 }
 
+@media (max-width: 700px) {
+    .header {
+        flex-direction: column;
+    }
+}
