--- a/style.css
+++ b/style.css
@@ -104,5 +104,13 @@ body {
 @media (max-width: 700px) {
     .header {
         flex-direction: column;
+        align-items: center;
+    }
+    .logo__box, .colors__box, .random-generator__box {
+        margin-bottom: 15px;
+    }
+
+    .logo__box {
+        text-align: center;
     }
 }
